--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 </div>
                 <div class="col-md-4">
                     <label>Ou até data específica</label>
-                    <input class="ateVencer dataput form-control" type="date"
-                        placeholder="Data do Vencimento">
+                    <input class="ateVencer dataput form-control" type="date" placeholder="Data do Vencimento">
                 </div>
             </div>
             <hr>
