Alterações <STEP> para inclusão de taxas de juros fracionada

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <legend>Taxa</legend>
                     <div class="col-md-6">
                         <label class="control-label">Mensal (padrão)</label>
-                        <input class="taxa form-control" type="number" placeholder="Taxa de juros">
+                        <input class="taxa form-control" type="number" placeholder="Taxa de juros" step="0.05">
                     </div>
                     <div class="col-md-6">
                         <label class="control-label">Ou taxa anual</label>
-                        <input class="taxaAno form-control" type="number" placeholder="Senão, vazio">
+                        <input class="taxaAno form-control" type="number" placeholder="Senão, vazio" step="0.05">
                     </div>
                 </div>
                 <hr>
