--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+    <!-- Ultima atualização 17- 09 - 2022 -- Freitas01 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Calculadora Juros Compostos</title>
+    <title>Calculadora Juros Compostos - 2022</title>
 </head>
 
 <body>
